# hiwr_opencv_detector

./: .gitignore  CMakeLists.txt  Makefile  README.md  facetracking.launch  hiwr_opencv_detector.xml  package.xml  uvc_cam_node.xml
include/: GetStateRequest.h  GetStateResponse.h  SetStateRequest.h  SetStateResponse.h  UVCCamConfig.h  hiwr_opencv_detector.h  uvc_cam.h  uvc_cam_node.h
launch/: facetracking.launch  uvc_cam.launch
param/: config_FT.yaml
src/: hiwr_opencv_detector.cpp  hiwr_opencv_detector.cpp.autosave  uvc_cam_node.cpp
