<?xml version="1.0"?>
<package>
  <name>hiwr_opencv_detector</name>
  <version>1.0.0</version>
  <description>The facetracking nodelet package</description>
  <maintainer email="lucile.peuch@worldline.com">lpeuch</maintainer>

  <license>Apache V2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg_cpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>controller</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg_cpp</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>controller</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>opencv</run_depend>

  <export>
    <nodelet plugin="${prefix}/hiwr_opencv_detector.xml"/>
  </export>
</package>

